# autoresearch-2.0

./: .gitignore  README.md  agent.py  benchmark.py  benchmark_report.json  blog.tex  config.py  experiment_memory.json  gui.py  hardware.py  models.py  optuna_search.py  prepare.py  program.md  pyproject.toml  run.py  run_loop.py  setup.sh  start.sh  train.py
agents/: __init__.py  analyst.py  architecture.py  hyperparameter.py  memory.py  optimizer.py  utils.py
tests/: __init__.py  test_agents.py  test_config.py
